@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ma1uta.matrix</groupId>
     <artifactId>jeon</artifactId>
-    <version>0.8.0-SNAPSHOT</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -64,7 +64,8 @@
         <!-- common properties -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
+        <packaging.type>bundle</packaging.type>
 
         <!-- plugin versions -->
         <version.plugin.maven-compiler-plugin>3.8.0</version.plugin.maven-compiler-plugin>
@@ -72,7 +73,7 @@
         <version.plugin.maven-surefire-plugin>2.22.0</version.plugin.maven-surefire-plugin>
         <version.plugin.maven-failsafe-plugin>2.22.0</version.plugin.maven-failsafe-plugin>
         <version.plugin.maven-source-plugin>3.0.1</version.plugin.maven-source-plugin>
-        <version.plugin.maven-javadoc-plugin>3.0.1</version.plugin.maven-javadoc-plugin>
+        <version.plugin.maven-javadoc-plugin>3.1.0</version.plugin.maven-javadoc-plugin>
         <version.plugin.maven-site-plugin>3.7.1</version.plugin.maven-site-plugin>
         <version.plugin.maven-project-info-plugin>3.0.0</version.plugin.maven-project-info-plugin>
         <version.plugin.maven-gpg-plugin>1.6</version.plugin.maven-gpg-plugin>
@@ -93,6 +94,7 @@
         <version.lib.jakarta.json.bind-api>1.0.1</version.lib.jakarta.json.bind-api>
         <version.lib.swagger-annotations>2.0.8</version.lib.swagger-annotations>
         <version.lib.jackson-annotations>2.9.9</version.lib.jackson-annotations>
+        <version.lib.jakarta.xml.bind-api>2.3.2</version.lib.jakarta.xml.bind-api>
 
         <!-- compatibility -->
         <version.lib.jakarta.activation-api>1.2.1</version.lib.jakarta.activation-api>
@@ -319,6 +321,14 @@
                         </dependency>
                     </dependencies>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${version.plugin.maven-compiler-plugin}</version>
+                    <configuration>
+                        <release>${java.version}</release>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -342,7 +352,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
-             <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
@@ -410,89 +420,6 @@
                 </plugins>
             </build>
         </profile>
-
-        <profile>
-            <id>jdk9+</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <properties>
-                <packaging.type>jar</packaging.type>
-            </properties>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <version>${version.plugin.maven-compiler-plugin}</version>
-                            <executions>
-                                <execution>
-                                    <id>default-compile</id>
-                                    <configuration>
-                                        <!-- compile everything to ensure module-info contains right entries -->
-                                        <release>9</release>
-                                    </configuration>
-                                </execution>
-                                <execution>
-                                    <id>base-compile</id>
-                                    <goals>
-                                        <goal>compile</goal>
-                                    </goals>
-                                    <!-- recompile everything for target VM except the module-info.java -->
-                                    <configuration>
-                                        <excludes>
-                                            <exclude>module-info.java</exclude>
-                                        </excludes>
-                                        <source>${java.version}</source>
-                                        <target>${java.version}</target>
-                                    </configuration>
-                                </execution>
-                            </executions>
-                            <configuration>
-                                <source>${java.version}</source>
-                                <target>${java.version}</target>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <artifactId>maven-surefire-plugin</artifactId>
-                            <configuration>
-                                <argLine>--add-modules java.xml.bind</argLine>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-
-        </profile>
-
-        <profile>
-            <id>jdk8-</id>
-            <activation>
-                <jdk>(,9)</jdk>
-            </activation>
-            <properties>
-                <packaging.type>bundle</packaging.type>
-            </properties>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <version>${version.plugin.maven-compiler-plugin}</version>
-                            <configuration>
-                                <source>${java.version}</source>
-                                <target>${java.version}</target>
-                                <excludes>
-                                    <exclude>module-info.java</exclude>
-                                </excludes>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
     </profiles>
 
     <dependencyManagement>
@@ -521,6 +448,11 @@
                 <groupId>jakarta.activation</groupId>
                 <artifactId>jakarta.activation-api</artifactId>
                 <version>${version.lib.jakarta.activation-api}</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${version.lib.jakarta.xml.bind-api}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
